tests/reference/ast-esub1-15eb690.stderr
tests/errors/esub1.f90:1:16 syntax error: token type 'identifier' is unexpected here
subroutine g() r
               ^
